--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ nav a:hover { color:#fca311; }
 button.cta { background:#fca311; color:#fff; padding:15px 35px; border-radius:8px; font-weight:600; transition:0.3s; }
 button.cta:hover { background:#ffb347; }
 section { padding-top:80px; }
+input, textarea { width: 100%; }
 </style>
 </head>
 <body>
@@ -100,22 +101,20 @@ section { padding-top:80px; }
   </div>
 </section>
 
-<!-- Contact Section -->
+<!-- Contact Section with EmailJS Form -->
 <section id="contact" class="py-20 px-5 max-w-7xl mx-auto bg-gray-900 rounded-xl my-10">
   <h2 class="text-4xl font-bold text-center mb-12 fade-up">Contact Us</h2>
-  <div class="grid md:grid-cols-3 gap-10">
-    <div class="fade-up p-6 bg-gray-800 rounded-xl text-center shadow-lg">
-      <h3 class="text-2xl font-semibold mb-2">Email</h3>
-      <p>animireddyvineeth@gmail.com</p>
-    </div>
-    <div class="fade-up p-6 bg-gray-800 rounded-xl text-center shadow-lg">
-      <h3 class="text-2xl font-semibold mb-2">Website</h3>
-      <p><a href="https://avios-ai.netlify.app" class="text-yellow-400 hover:underline" target="_blank">https://avios-ai.netlify.app</a></p>
-    </div>
-    <div class="fade-up p-6 bg-gray-800 rounded-xl text-center shadow-lg">
-      <h3 class="text-2xl font-semibold mb-2">Message</h3>
-      <p>Reach out to explore partnerships, collaborations, or learn more about our AI solutions.</p>
-    </div>
+  <div class="max-w-3xl mx-auto fade-up">
+    <form id="contact-form" class="grid gap-6">
+      <input type="text" name="from_name" placeholder="Your Name" required
+        class="p-4 rounded-lg bg-gray-800 text-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
+      <input type="email" name="from_email" placeholder="Your Email" required
+        class="p-4 rounded-lg bg-gray-800 text-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
+      <textarea name="message" placeholder="Your Message" rows="5" required
+        class="p-4 rounded-lg bg-gray-800 text-white focus:outline-none focus:ring-2 focus:ring-yellow-400"></textarea>
+      <button type="submit" class="cta w-full">Send Message</button>
+      <p id="form-status" class="text-center mt-2"></p>
+    </form>
   </div>
 </section>
 
@@ -125,7 +124,7 @@ section { padding-top:80px; }
 
 <!-- Scripts -->
 <script>
-  // Scroll fade-in
+  // Scroll fade-in animation
   const faders = document.querySelectorAll('.fade-up');
   const appearOptions = { threshold: 0.2, rootMargin: "0px 0px -50px 0px" };
   const appearOnScroll = new IntersectionObserver((entries, observer)=>{
@@ -137,7 +136,7 @@ section { padding-top:80px; }
   }, appearOptions);
   faders.forEach(fader => appearOnScroll.observe(fader));
 
-  // Particles.js config
+  // Particles.js configuration
   particlesJS("particles-js", {
     "particles": {
       "number": { "value": 60, "density": {"enable": true,"value_area":800} },
@@ -153,6 +152,29 @@ section { padding-top:80px; }
       "events":{"onhover":{"enable":true,"mode":"repulse"},"onclick":{"enable":true,"mode":"push"},"resize":true}
     },
     "retina_detect": true
+  });
+</script>
+
+<!-- EmailJS Script -->
+<script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<script>
+  (function(){
+    emailjs.init("YOUR_PUBLIC_KEY"); // Replace with your EmailJS public key
+  })();
+
+  const form = document.getElementById('contact-form');
+  const status = document.getElementById('form-status');
+
+  form.addEventListener('submit', function(event){
+    event.preventDefault();
+    emailjs.sendForm('YOUR_SERVICE_ID', 'YOUR_TEMPLATE_ID', this)
+      .then(() => {
+        status.innerHTML = "✅ Message sent successfully!";
+        form.reset();
+      }, (err) => {
+        status.innerHTML = "❌ Error sending message. Try again.";
+        console.error('EmailJS Error:', err);
+      });
   });
 </script>
 
