--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   .fade-up { opacity:0; transform: translateY(16px); transition: all .6s ease-out; }
   .fade-up.visible { opacity:1; transform:none; }
 
-  /* HERO (single foreground image; add ::before later if you use backend-hero) */
+  /* HERO */
   .hero {
     position: relative;
     min-height: 100vh;
@@ -139,7 +139,7 @@
   </div>
 </section>
 
-<!-- Testimonials -->
+<!-- Testimonials (centered on screen, auto-scroll) -->
 <section id="testimonials" class="min-h-screen flex items-center justify-center px-4">
   <div class="w-full max-w-4xl">
     <h2 class="text-4xl font-bold text-center mb-10">Testimonials</h2>
@@ -199,11 +199,11 @@
 <section id="contact" class="max-w-7xl mx-auto bg-gray-800 rounded-xl my-10 p-10 fade-up">
   <h2 class="text-4xl font-bold text-center mb-12">Contact Us</h2>
   <div class="max-w-3xl mx-auto">
-    <!-- IMPORTANT: names must match your EmailJS template variables -->
+    <!-- IMPORTANT: names match your EmailJS template ({{name}}, {{email}}, {{message}}) -->
     <form id="contact-form" class="grid gap-6">
-      <input type="text" name="user_name" placeholder="Your Name" required class="p-4 rounded-lg bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
-      <input type="email" name="user_email" placeholder="Your Email" required class="p-4 rounded-lg bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
-      <textarea name="message" placeholder="Your Message" rows="5" required class="p-4 rounded-lg bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-yellow-400"></textarea>
+      <input type="text"   name="name"    placeholder="Your Name"   required class="p-4 rounded-lg bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
+      <input type="email"  name="email"   placeholder="Your Email"  required class="p-4 rounded-lg bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-yellow-400">
+      <textarea            name="message" placeholder="Your Message" rows="5" required class="p-4 rounded-lg bg-gray-700 text-white focus:outline-none focus:ring-2 focus:ring-yellow-400"></textarea>
       <button id="contact-submit" type="submit" class="btn-primary w-full">Send Message</button>
       <p id="form-status" class="text-center mt-2"></p>
     </form>
@@ -225,38 +225,27 @@
 <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
 <script>
   // === EmailJS SETUP ===
-  // 1) Replace with your Public Key from EmailJS Dashboard
-  emailjs.init("YOUR_PUBLIC_KEY");
+  // Replace with your real PUBLIC key (Dashboard → Account → API Keys)
+  emailjs.init("PUBLIC_KEY_HERE");
 
   const form   = document.getElementById('contact-form');
   const status = document.getElementById('form-status');
   const submit = document.getElementById('contact-submit');
 
-  form.addEventListener('submit', function(event){
-    event.preventDefault();
+  form.addEventListener('submit', function (e) {
+    e.preventDefault();
     status.textContent = "Sending…";
     submit.disabled = true;
 
-    // 2) Replace with your Service ID and Template ID
-    emailjs.sendForm('YOUR_SERVICE_ID', 'YOUR_TEMPLATE_ID', this)
+    // Uses your Service ID and Template ID
+    emailjs.sendForm('service_4ytq1ph', '1agv3m5', this)
       .then(() => {
         status.textContent = "✅ Message sent successfully!";
         form.reset();
       })
       .catch((err) => {
         console.error("EmailJS error:", err);
-        status.textContent = "❌ Error sending message. Using email client…";
-
-        // Fallback: open user's email client with prefilled content
-        const data = new FormData(form);
-        const name = encodeURIComponent(data.get('user_name') || '');
-        const email = encodeURIComponent(data.get('user_email') || '');
-        const msg = encodeURIComponent(data.get('message') || '');
-        const subject = encodeURIComponent("New message from Avios AI website");
-        const body = encodeURIComponent(`Name: ${name}\nEmail: ${email}\n\n${msg}`);
-
-        // Replace with your receiving email address
-        window.location.href = `mailto:you@example.com?subject=${subject}&body=${body}`;
+        status.textContent = "❌ Error sending message. Check Public Key / Allowed Domain / Template fields.";
       })
       .finally(() => {
         submit.disabled = false;
