--- a/index.html
+++ b/index.html
@@ -1,41 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Avios AI — Smart AI Automation, NLP & Intelligent Assistants</title>
+  <!-- ✅ SEO Title -->
+  <title>Avios AI — AI Automation, NLP Copilots & Multimodal Intelligence</title>
 
-  <meta name="description" content="Avios AI builds intelligent AI automation, NLP assistants, and multimodal solutions to streamline workflows and enhance productivity for modern businesses.">
-  <meta name="keywords" content="AI, Artificial Intelligence, NLP, Machine Learning, Automation, Multimodal AI, Productivity, AI automation for business, predictive analytics, AI copilots, AI workflow assistant">
-  <meta name="author" content="Avios AI">
+  <!-- ✅ Meta Description -->
+  <meta name="description" content="Avios AI builds intelligent automation, NLP copilots, and multimodal solutions that help teams work smarter, faster, and more efficiently." />
 
-  <!-- Open Graph -->
-  <meta property="og:title" content="Avios AI — AI Automation & Smart Assistants" />
-  <meta property="og:description" content="Enhance workflow, automate tasks, and build AI copilots with Avios AI." />
+  <!-- ✅ Primary Keywords -->
+  <meta name="keywords" content="AI, AI Automation, NLP, Multimodal AI, Machine Learning, Workflow AI, AI Copilots, Predictive Analytics, Generative AI, AI systems, Avios AI, business automation AI" />
+
+  <!-- ✅ Author -->
+  <meta name="author" content="Avios AI" />
+
+  <!-- ✅ Robots — Maximum indexing -->
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+
+  <!-- ✅ Language -->
+  <meta http-equiv="Content-Language" content="en">
+
+  <!-- ✅ Geo -->
+  <meta name="geo.region" content="IN" />
+  <meta name="geo.placename" content="India" />
+
+  <!-- ✅ Caching -->
+  <meta http-equiv="Cache-Control" content="public, max-age=604800, must-revalidate">
+
+  <!-- ✅ Canonical -->
+  <link rel="canonical" href="https://vineeth2002.github.io/Avios-AI/" />
+
+  <!-- ✅ Social — Open Graph -->
+  <meta property="og:title" content="Avios AI — Intelligent AI Automation & Multimodal Assistants" />
+  <meta property="og:description" content="Avios AI builds intelligent AI automation, NLP assistants, and multimodal solutions that streamline workflows and boost productivity." />
   <meta property="og:image" content="https://vineeth2002.github.io/Avios-AI/assets/hero-image_v2.png" />
+  <meta property="og:image:secure_url" content="https://vineeth2002.github.io/Avios-AI/assets/hero-image_v2.png" />
   <meta property="og:url" content="https://vineeth2002.github.io/Avios-AI/" />
   <meta property="og:type" content="website" />
 
-  <!-- Twitter Card -->
+  <!-- ✅ Social — Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Avios AI — AI Automation & Smart Assistants" />
-  <meta name="twitter:description" content="Enhance workflow, automate tasks, and build AI copilots with Avios AI." />
+  <meta name="twitter:title" content="Avios AI — Intelligent AI Automation & Multimodal Assistants" />
+  <meta name="twitter:description" content="Avios AI builds intelligent AI automation, NLP assistants, and multimodal solutions that streamline workflows and boost productivity." />
   <meta name="twitter:image" content="https://vineeth2002.github.io/Avios-AI/assets/hero-image_v2.png" />
+  <meta name="twitter:image:alt" content="Avios AI — Advanced Automation & Multimodal Intelligence" />
 
-  <!-- Canonical -->
-  <link rel="canonical" href="https://vineeth2002.github.io/Avios-AI/" />
-
-  <!-- Favicon -->
+  <!-- ✅ Favicon -->
   <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
-  <!-- Fonts & CSS libs -->
+  <!-- ✅ Fonts & CSS libs -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 
-  <!-- JSON-LD -->
+  <!-- ✅ Structured Data: Organization -->
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
@@ -43,14 +63,82 @@
     "name": "Avios AI",
     "url": "https://vineeth2002.github.io/Avios-AI/",
     "logo": "https://vineeth2002.github.io/Avios-AI/assets/hero-image_v2.png",
-    "description": "Avios AI builds intelligent AI automation, NLP assistants, and multimodal solutions to streamline workflows and enhance productivity.",
-    "sameAs": ["https://github.com/vineeth2002"],
+    "description": "Avios AI builds intelligent AI automation, NLP assistants, and multimodal solutions to streamline workflows and improve business productivity.",
+    "sameAs": [
+      "https://github.com/vineeth2002"
+    ],
     "contactPoint": [{
       "@type": "ContactPoint",
       "email": "freevpncoupon@gmail.com",
       "contactType": "customer support",
       "availableLanguage": ["English"]
     }]
+  }
+  </script>
+
+  <!-- ✅ Structured Data: Website Search -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"WebSite",
+    "name":"Avios AI",
+    "url":"https://vineeth2002.github.io/Avios-AI/",
+    "potentialAction":{
+      "@type":"SearchAction",
+      "target":"https://vineeth2002.github.io/Avios-AI/?q={search_term_string}",
+      "query-input":"required name=search_term_string"
+    }
+  }
+  </script>
+
+  <!-- ✅ Structured Data: Services -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Service",
+    "name":"AI Automation, NLP & Multimodal Intelligence",
+    "provider":{
+      "@type":"Organization",
+      "name":"Avios AI",
+      "url":"https://vineeth2002.github.io/Avios-AI/"
+    },
+    "serviceType":"AI Solutions",
+    "areaServed":"Worldwide",
+    "description":"Avios AI creates intelligent automation tools, AI copilots, NLP systems, and multimodal platforms to improve business efficiency."
+  }
+  </script>
+
+  <!-- ✅ Structured Data: FAQ -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"FAQPage",
+    "mainEntity":[
+      {
+        "@type":"Question",
+        "name":"What is Avios AI?",
+        "acceptedAnswer":{
+          "@type":"Answer",
+          "text":"Avios AI builds production-ready AI systems—automation, NLP, and multimodal intelligence—to deliver measurable business value."
+        }
+      },
+      {
+        "@type":"Question",
+        "name":"Can I integrate AI into my business?",
+        "acceptedAnswer":{
+          "@type":"Answer",
+          "text":"Yes. You can start with one workflow, measure ROI in weeks, and scale across multiple teams."
+        }
+      },
+      {
+        "@type":"Question",
+        "name":"Do you provide support?",
+        "acceptedAnswer":{
+          "@type":"Answer",
+          "text":"Yes. We provide implementation, monitoring, model updates, and support SLAs."
+        }
+      }
+    ]
   }
   </script>
 
@@ -219,7 +307,7 @@
 
     <div class="hero-content max-w-3xl mx-auto">
       <h1 class="text-4xl md:text-6xl font-extrabold leading-tight mb-6">
-        Intelligent AI Solutions for Everyone
+        AI Automation & Intelligent NLP Solutions for Business
       </h1>
       <p class="text-lg md:text-xl mb-8">
         AI automation, NLP copilots, predictive analytics, and intelligent tools that accelerate productivity and transform workflows.
@@ -371,7 +459,7 @@
 
   <!-- App JS -->
   <script>
-    /* EmailJS */
+    /* EmailJS (use your provided keys) */
     const PUBLIC_KEY="public_gf3Q5jLBYPf1ZOUko";
     const SERVICE_ID="service_4ytq1ph";
     const TEMPLATE_ID="template_71vcpfp";
